[package]
name = "lightbeat"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-only"

[dependencies]
eframe = "0.31"
egui = "0.31"
egui-phosphor = "0.9"
ableton-link = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
ringbuf = "0.4"
artnet_protocol = "0.4"
sacn = "0.4"
midir = "0.10.3"
