[package]
name = "lightbeat"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-only"

[dependencies]
eframe = "0.31"
egui = "0.31"
egui_extras = "0.31"
egui-phosphor = "0.9"
ableton-link = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
ringbuf = "0.4"
artnet_protocol = "0.4"
sacn = "0.4"
midir = "0.10.3"
cpal = "0.15.3"
jack = "0.13"
realfft = "3.5.0"
rustfft = "6.4.1"
num-complex = "0.4.6"
parking_lot = "0.12.5"
crossbeam-channel = "0.5"
